SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/Component_ORG__c.object
<CustomObject>
    <fields>
        <fullName>APIUserName__c</fullName>
        <description>APIUserName from the component ORG</description>
        <inlineHelpText>APIUserName from the component ORG</inlineHelpText>
        <label>APIUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIUserPassword__c</fullName>
        <description>API User Password + Security Token (if any)  from the component ORG</description>
        <inlineHelpText>API User Password + Security Token (if any)  from the component ORG

Inform Component ORG to set password never expires for these API user</inlineHelpText>
        <label>APIUserPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AV_Callback_URL__c</fullName>
        <description>Anti-Virus Callback URL - This URL is used on the CMS Enterprise REST Callback POST service (apex class:cmsePORCallback) to route the calls to the appropriate Component ORG callback URL for updating the file scanning status</description>
        <inlineHelpText>Anti-Virus Callback URL - This URL is used on the CMS Enterprise REST Callback POST service (apex class:cmsePORCallback) to route the calls to the appropriate Component ORG callback URL for updating the file scanning status</inlineHelpText>
        <label>AV Callback URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>Connected App&apos;s clientId from the component ORG</description>
        <label>ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <description>Connected App&apos;s ClientSecret from the component ORG</description>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAUTH_Endpoint__c</fullName>
        <description>OAUTH Endpoint inputted by the Enterprise ORG Dev</description>
        <inlineHelpText>OAUTH Endpoint inputted by the Enterprise ORG Dev</inlineHelpText>
        <label>OAUTH Endpoint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORG_ID__c</fullName>
        <description>ORG ID of the component org</description>
        <label>ORG ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Request_Endpoint__c</fullName>
        <description>Send Request Endpoint inputted by the Enterprise ORG Dev</description>
        <inlineHelpText>Send Request Endpoint inputted by the Enterprise ORG Dev</inlineHelpText>
        <label>Send Request Endpoint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Component ORG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ORG_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Component ORG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component ORGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMS_Comp_ORG_ID_should_be_18_chars_long</fullName>
        <active>true</active>
        <description>CMS Component ORG ID should be 18 chars long</description>
        <errorConditionFormula>if(LEN(ORG_ID__c)&lt;18, true, false)</errorConditionFormula>
        <errorDisplayField>ORG_ID__c</errorDisplayField>
        <errorMessage>ORG ID should be 18 chars long</errorMessage>
    </validationRules>
</CustomObject>